--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -31,6 +31,16 @@ jobs:
         echo "$APPLICATION_MAIN" > ./application.yml
       env:
         APPLICATION_MAIN: ${{ secrets.APPLICATION_MAIN }}
+
+    - name: Gradle Caching
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-    
              
     
     # gradle build
