--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -3,8 +3,9 @@ name: Java CI & CD with Gradle
 on:
   push:
     branches: [ "develop" ]
-  # pull_request:
-  #   branches: [ "develop" ]
+
+  pull_request:
+    branches: [ "develop" ]
 
 permissions:
   contents: read
